kubernetes-sessions/ingress-demo/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1  
          image: hashicorp/http-echo
          args:
            - "-text=Welcome APP from APP1 deployment pod"
          ports:
            - containerPort: 5678
