kubernetes-sessions/ingress-demo/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2 
          image: hashicorp/http-echo
          args:
            - "-text=Welcome APP from APP2 deployment pod"
          ports:
            - containerPort: 5678
